k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: meridian-devsecops
  labels:
    name: meridian-devsecops
    project: meridian-devsecops
