k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: meridian-static-app-network-policy
  namespace: meridian-devsecops
spec:
  podSelector:
    matchLabels:
      app: meridian-static-app
  policyTypes:
    - Ingress
    - Egress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: meridian-devsecops
      ports:
        - protocol: TCP
          port: 8080

  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              name: meridian-devsecops
      ports:
        - protocol: TCP
          port: 8080
